# dance-club

./: .cursorrules  .gitignore  README.md  dance_schools_20250206_224702.yaml  implementation_plan.md  requirements.md
backend/: .dockerignore  .python-version  README.md  _pyproject.toml  dockerfile  makefile  manage.py  pyproject.toml  requirements.txt
backend/accounts/: admin.py  models.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_user_id.py  0002_alter_user_phone.py  0002_remove_user_username_alter_user_email.py  0002_user_profile_picture_url.py
backend/classes/: admin.py  models.py
backend/classes/migrations/: 0001_initial.py  0002_remove_danceclass_recurring_schedules_and_more.py  0002_specialschedule_replaced_schedule_date.py  0003_alter_specialschedule_note.py
backend/classes/schemas/: dance_class.py  event.py  instructor.py  location.py  user_public_schema.py  user_schema.py
backend/classes/services/: class_manager.py  class_search_engine.py  events_manager.py  events_search_engine.py  instructor_manager.py  instructor_private_manager.py  instructor_public_manager.py  location_search_engine.py
backend/events/: admin.py  models.py
backend/events/migrations/: 0001_initial.py  0002_remove_location_capacity_remove_location_description_and_more.py
backend/events/services/: events_serach_engine.py
backend/mydanceclub/: api.py  asgi.py  auth.py  models.py  settings.py  urls.py  wsgi.py
backend/mydanceclub/api/: __init__.py  auth.py  classes.py  events.py  instructors.py  public.py  reviews.py  schedules.py  schemas.py  types.py
backend/reviews/: admin.py  constants.py  models.py
backend/reviews/migrations/: 0001_initial.py  0002_alter_danceclassreview_engagement.py  0002_genre_alter_reviewverification_options_and_more.py  (+1 more)
backend/reviews/schemas/: base.py  (+4 more)
backend/shared/: const.py
(+211 files in other folders)
