[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.5",
    "django-cors-headers>=4.6.0",
    "django-ninja>=1.3.0",
    "django-unfold>=0.46.0",
    "faker>=35.2.0",
    "gunicorn>=23.0.0",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
    "pytz>=2025.1",
    "rich>=13.9.4",
]

[dependency-groups]
dev = [
    "django-types>=0.20.0",
    "googlemaps>=4.10.0",
    "pyright>=1.1.393",
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "ruff>=0.9.4",
]


[tool.pyright]
ignore = [
    ".venv",
    "**/*.pyi",
    "**/__pycache__",
    "**/__init__.py",
    "**/__init__.pyi",
    "**/__init__.pyc",
    "**/__init__.pyo",
    "**/__init__.pyd",
    "**/migrations",
    "**/seed_test_data_*.py",
    
]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#configuration-file
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#configuration-file


